log
Sun 12 May 2024 04:37:10 AM UTC: 
 tests:  0|5
total_score: 0/70
09aaf8a
Thu 16 May 2024 03:11:56 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
d6eda8f
Thu 16 May 2024 03:12:43 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
65340b9
Thu 16 May 2024 03:13:44 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:19: error: unused variable ‘newNode’ [-Werror=unused-variable]
   60 |             Node* newNode = copy(n);
      |                   ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fa2bfc7
Thu 16 May 2024 03:13:54 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c586b14
Thu 16 May 2024 03:14:26 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
cc6c24b
Thu 16 May 2024 03:14:55 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
56a2c5a
Thu 16 May 2024 03:15:27 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a8a8f58
Thu 16 May 2024 03:16:03 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
84c68cf
Thu 16 May 2024 03:16:30 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:13: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   61 |             newNode = copy(n);
      |             ^~~~~~~
      |             Node
sudoku.c:61:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
aad61d6
Thu 16 May 2024 03:16:36 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d9b0e7f
Thu 16 May 2024 03:31:07 AM UTC: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   55 |         if(n->sudo[i][k]!=0) cont[n->sudo[i][k]]++; {
      |         ^~
sudoku.c:55:53: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   55 |         if(n->sudo[i][k]!=0) cont[n->sudo[i][k]]++; {
      |                                                     ^
cc1: all warnings being treated as errors
Compilation failed
067199e
